[gd_scene load_steps=75 format=3 uid="uid://bbbpaq32ig55f"]

[ext_resource type="Script" uid="uid://cwq26myvkrpnd" path="res://script/boss.gd" id="1_ot3je"]
[ext_resource type="Texture2D" uid="uid://ccra3kfey2pbi" path="res://testures/Undead executioner puppet/png/attacking.png" id="2_tcgrh"]
[ext_resource type="Texture2D" uid="uid://2tqnfykivmfb" path="res://testures/Undead executioner puppet/png/death.png" id="3_gtfqc"]
[ext_resource type="Texture2D" uid="uid://ckctbppmyjckt" path="res://testures/Undead executioner puppet/png/idle.png" id="4_ex4t5"]
[ext_resource type="Texture2D" uid="uid://bghd1mpj3r5fi" path="res://testures/Undead executioner puppet/png/idle2.png" id="5_27m4v"]
[ext_resource type="Texture2D" uid="uid://dvflwo26eesp6" path="res://testures/Undead executioner puppet/png/skill1.png" id="6_b5yaj"]
[ext_resource type="Texture2D" uid="uid://u3kgcg0v5git" path="res://testures/Undead executioner puppet/png/summon.png" id="6_tcgrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ar14e"]
atlas = ExtResource("2_tcgrh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yuaj"]
atlas = ExtResource("2_tcgrh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sps"]
atlas = ExtResource("2_tcgrh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mup4r"]
atlas = ExtResource("2_tcgrh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_btlh5"]
atlas = ExtResource("2_tcgrh")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb7ca"]
atlas = ExtResource("2_tcgrh")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbucm"]
atlas = ExtResource("2_tcgrh")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_24v5s"]
atlas = ExtResource("2_tcgrh")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2yxj"]
atlas = ExtResource("2_tcgrh")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6pe"]
atlas = ExtResource("2_tcgrh")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ic3x"]
atlas = ExtResource("2_tcgrh")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxsja"]
atlas = ExtResource("2_tcgrh")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sit1d"]
atlas = ExtResource("2_tcgrh")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_grvva"]
atlas = ExtResource("3_gtfqc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gco4"]
atlas = ExtResource("3_gtfqc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lbht"]
atlas = ExtResource("3_gtfqc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7pd5"]
atlas = ExtResource("3_gtfqc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdice"]
atlas = ExtResource("3_gtfqc")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yglwv"]
atlas = ExtResource("3_gtfqc")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx0qr"]
atlas = ExtResource("3_gtfqc")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpl7b"]
atlas = ExtResource("3_gtfqc")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvu8o"]
atlas = ExtResource("3_gtfqc")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eobg"]
atlas = ExtResource("3_gtfqc")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba372"]
atlas = ExtResource("3_gtfqc")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bys6a"]
atlas = ExtResource("3_gtfqc")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xjqu"]
atlas = ExtResource("3_gtfqc")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0rqt"]
atlas = ExtResource("3_gtfqc")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iyga"]
atlas = ExtResource("3_gtfqc")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1uqc"]
atlas = ExtResource("3_gtfqc")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a56n4"]
atlas = ExtResource("3_gtfqc")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vbr0"]
atlas = ExtResource("3_gtfqc")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dr3w"]
atlas = ExtResource("3_gtfqc")
region = Rect2(800, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hjd2"]
atlas = ExtResource("3_gtfqc")
region = Rect2(900, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_prtag"]
atlas = ExtResource("4_ex4t5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkv74"]
atlas = ExtResource("4_ex4t5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_drisd"]
atlas = ExtResource("4_ex4t5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b7dy"]
atlas = ExtResource("4_ex4t5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1inpw"]
atlas = ExtResource("5_27m4v")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4hqd"]
atlas = ExtResource("5_27m4v")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5eiv"]
atlas = ExtResource("5_27m4v")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l34m3"]
atlas = ExtResource("5_27m4v")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5if1"]
atlas = ExtResource("5_27m4v")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm4oi"]
atlas = ExtResource("5_27m4v")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxwkd"]
atlas = ExtResource("5_27m4v")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4srit"]
atlas = ExtResource("5_27m4v")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtfqc"]
atlas = ExtResource("6_tcgrh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex4t5"]
atlas = ExtResource("6_tcgrh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_27m4v"]
atlas = ExtResource("6_tcgrh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5yaj"]
atlas = ExtResource("6_tcgrh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne4ne"]
atlas = ExtResource("6_tcgrh")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4oad"]
atlas = ExtResource("6_b5yaj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8cyp"]
atlas = ExtResource("6_b5yaj")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a54m"]
atlas = ExtResource("6_b5yaj")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mekwn"]
atlas = ExtResource("6_b5yaj")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7d2d"]
atlas = ExtResource("6_b5yaj")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6o1c"]
atlas = ExtResource("6_b5yaj")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc60x"]
atlas = ExtResource("6_b5yaj")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa5ov"]
atlas = ExtResource("6_b5yaj")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu5kf"]
atlas = ExtResource("6_b5yaj")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0xgm"]
atlas = ExtResource("6_b5yaj")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm35d"]
atlas = ExtResource("6_b5yaj")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nknhp"]
atlas = ExtResource("6_b5yaj")
region = Rect2(500, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ne4ne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar14e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yuaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mup4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btlh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb7ca")
}],
"loop": false,
"name": &"attacco1",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbucm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24v5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2yxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ic3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxsja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sit1d")
}],
"loop": false,
"name": &"attacco2",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_grvva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gco4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lbht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7pd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yglwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx0qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpl7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvu8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eobg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bys6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xjqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0rqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iyga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1uqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a56n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vbr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dr3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hjd2")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prtag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkv74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drisd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b7dy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1inpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4hqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5eiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l34m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5if1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm4oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxwkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4srit")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtfqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex4t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27m4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5yaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne4ne")
}],
"loop": false,
"name": &"summon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4oad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8cyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a54m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mekwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7d2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6o1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc60x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa5ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu5kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0xgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm35d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nknhp")
}],
"loop": false,
"name": &"teleport",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b0i1v"]
radius = 160.112

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jk8p7"]
size = Vector2(32.5, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qqua"]
size = Vector2(29, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ot3je"]
size = Vector2(58, 45)

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_ot3je")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ne4ne")
animation = &"attacco1"

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_b0i1v")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-2.75, 3)
shape = SubResource("RectangleShape2D_jk8p7")

[node name="ScytheHitbox1" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScytheHitbox1"]
position = Vector2(31, -2)
shape = SubResource("RectangleShape2D_7qqua")

[node name="ScytheHitbox2" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScytheHitbox2"]
position = Vector2(16, 6.5)
shape = SubResource("RectangleShape2D_ot3je")

[node name="HitboxTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="TeleportTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="ScytheHitbox1" to="." method="_on_scythe_hitbox_1_body_entered"]
[connection signal="body_entered" from="ScytheHitbox2" to="." method="_on_scythe_hitbox_2_body_entered"]
[connection signal="timeout" from="HitboxTimer" to="." method="_on_hitbox_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
